2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2010-04-03	Ralf Corsépius <ralf.corsepius@rtems.org>

	* sp62/init.c, sp65/init.c: #include <unistd.h>.

2010-03-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp43/init.c: Readdress use of ctype methods per recommendation from
	D.J. Delorie on the newlib mailing list. We should pass an unsigned
	char into these methods.

2010-03-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add new fatal error for configuring
	unlimited and maximum of 0.
	* spfatal13/.cvsignore, spfatal13/Makefile.am, spfatal13/spfatal13.doc,
	spfatal13/spfatal13.scn, spfatal13/testcase.h: New files.

2010-01-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp43/init.c: Fix warning.

2009-12-15	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* sp69/init.c: Fixed warnings.

2009-12-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp14/sp14.doc, sp14/sp14.scn: doc file have scn contents. Fix and
	update.

2009-12-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp69/init.c, sp69/sp69.doc, sp69/sp69.scn: Add test for statistics on
	expired periods. This detected the recently introduced PR1480.

2009-12-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp69/.cvsignore: New file.

2009-12-08	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* Makefile.am, configure.ac: Added a test for rate_monotonic_get_status
	to ensure that all paths are tested.
	* sp69/Makefile.am, sp69/init.c, sp69/sp69.doc, sp69/sp69.scn: New files.

2009-12-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp31/task1.c: Fixed spacing.

2009-12-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp18/init.c, sp31/task1.c, sp43/init.c, sp63/init.c, sp64/init.c,
	spfatal10/testcase.h, spfatal11/testcase.h, spobjgetnext/init.c,
	spwkspace/init.c: Use rtems_test_assert() consistently instead of
	system assert(). rtems_test_assert() is designed to integrate into
	the RTEMS test suite infrastructure.
