@@ -1,3 +1,7 @@
+2011-02-02	Joel Sherrill <joel.sherrilL@OARcorp.com>
+
+	* sp04/tswitch.c: Shrink memory requirements.
+
 2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	* configure.ac: Require autoconf-2.68, automake-1.11.1.
